# titatest

./: .gitignore  AUTHORS  CITATION  COPYING  Compile_Windows  Makefile  Makefile.am  README  README_dynamic_memory_problem  Readme.md  alloci.f90  alloci.for  autogen.sh  bata.for  bata_dc.for  bata_reg.for  bata_reg_dc.for  batadc.for  batadcreg.for  bbsedc.f90  bbsedc.for  bbsens.f90  bbsens.for  benchmark_compiler_settings.py  besp_elem.f90  besp_elem.for  bessi0.f90  bessi0.for  bessi1.f90  bessi1.for  bessk0.for  bessk1.f90  bessk1.for  beta.for  bkfak.f90  bkfak.for  blam0.f90  blam0.for  bmcm.for  bmcm2.for  (+225 more)
.github/workflows/: build_crtomo.yml
CutMcK/: Makefile  crerror.h  cutmck.f  cutmck.fin  electr.fin  elem.fin  err.fin  error.txt  make_crerr.sh  parmax.fin  relectr.f  relem.f  welectr.f  welem.f
cutmckee/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.orig  cutmck.cfg  cutmck.f  electrmod.f90  elemmod.f90  get_error.f90  make_crerr.sh  relectr.f  relem.f  welectr.f  welem.f
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  rules  tomotools.doc-base.EX  tomotools.substvars
doc/: CRManual.tex  Makefile  crmod.tex  crmod_theor_dc.tex  crtomo_inp.tex  crtomo_theor_eit.tex  crtomo_theor_ert.tex.backup  crtomo_theor_sto.tex  intro.tex
docs/: debianization.txt
docs/doc/: CRManual.tex.backup  crmod_inp.tex  crmod_theor_ip.tex  crtomo_err_noise.tex  crtomo_theor_ert.tex  crtomo_theor_opti.tex  crtomo_theor_regu.tex
docs/manual_sphinx/: conf.py  index.rst
docs/manual_sphinx/_build/doctrees/: environment.pickle  index.doctree  mgs.doctree
docs/manual_sphinx/mgs/: mgs.rst
examples/Broken_Hill/skel/exe/: crtomo.cfg  crtomo.pid  inv.elecpositions  inv.gstat  inv.lastmod
examples/Broken_Hill/skel/inv/: cjg.ctr  eps.ctr  inv.ctr  rho00.mag  rho00.modl  rho00.pha  rho01.mag  rho01.modl  rho01.pha  rho02.mag  rho02.modl  rho02.pha  rho03.mag  rho03.modl  rho03.pha  run.ctr
examples/Broken_Hill/skel/output/: cjg.ctr  eps.ctr  inv.ctr  rho01.mag  rho01.pha  rho02.mag  rho02.pha  rho03.mag  rho03.pha  rho04.mag  rho04.pha  rho05.mag  rho05.pha  rho06.pha  rho07.mag  rho07.pha  rho08.pha  rho09.pha  rho10.pha  rho11.pha  run.ctr
examples/CallFromPython/: run.py
examples/DifferenceInversion/02/data-crt/: 1pe00.crt  1pe15.crt
examples/Electrode_Capacitances/tomodir/exe/: crmod.pid  crtomo.cfg  inv.elecpositions
examples/Grids/: Readme.txt
examples/Grids/Triangular/01_Rodderberg_Krater/: Readme.txt
examples/IndividualErrors/01_complex_and_fpi/: .gitignore
examples/IndividualErrors/01_complex_and_fpi/Preparation/: Create Individual Errors.ipynb
examples/IndividualErrors/02_dc_simple/exe/: crtomo.cfg
examples/IndividualErrors/03_complex_simple/: .gitignore
examples/IndividualErrors/03_complex_simple/exe/: crtomo.cfg
examples/Inversion2.5D/td/: .gitignore
examples/Inversion2.5D/td/exe/: crtomo.cfg
examples/MGS/: .gitignore  plot_invs.py  run.py
examples/MGS/01_simple/: plot.sh  run.sh
examples/MGS/02_advanced/: plot_invs.py
examples/MGS/02_advanced/GRID/: ctm_triangles.txt  ctmck.info  elec.dat.orig  elem.dat.orig
examples/MGS/02_advanced/GRID2/: elec.dat.orig
examples/MGS/GRID2/: ctm_triangles.txt  ctmck.info  elem.dat.orig
examples/Minimal_Modeling/exe/: crmod.cfg  crmod.pid
examples/resolution/hom_prior/exe/: crtomo.cfg
examples/resolution/hom_prior/inversion/: cov1_m.diag  cov2_m.diag
examples/resolution/skel/exe/: crmod.cfg  crtomo.cfg
examples/resolution/skel/inversion/: eps.ctr  rho00.mag  rho01.mag
examples/resolution/true_prior/exe/: crtomo.cfg
examples/uncert/: complex_ata.m
examples/uncert/skel/exe/: crt.noisemod  (+6 more)
frontcover/inversion/exe/: crtomo.cfg  inv.elecpositions  inv.gstat
frontcover/inversion/grid/: elem.dat_new
frontcover/inversion/inv/: cjg.ctr  coverage.mag  eps.ctr  inv.ctr  rho00.mag  rho00.modl  rho00.pha  rho01.mag  rho01.modl  rho02.mag  rho02.modl  rho03.mag  rho03.modl  rho04.mag  rho04.modl  rho04.pha  rho05.cond.im  rho05.cond.re  rho05.mag  rho05.modl  rho05.res.re  run.ctr
m_tools/: Makefile  README_cond_cim  crmod_sim.sh  crtomo_plot.sh  crtomo_run.sh  genCRTmod.m  genCRTmod_stat.m  genSGsim.sh  plotCRTmod.m  plotCRTmod_batch.m  plotCRTmod_batch_cond.m  plotCRTpot.m  plot_cur_crmod  plot_cur_crt  plot_cur_crtomo  plot_diff.sh  plt_all_crt  plt_all_crt2  plt_all_crtinv  plt_inv_ctr  stochastic_condition_fit_sim.sh  stochastic_condition_sim.sh  stochastic_eval.sh  stochastic_eval_multi.sh  stochastic_eval_multi2.sh  stochastic_eval_single.sh  stochastic_fit_sim.sh  stochastic_seval_multi2.sh  stochastic_sim.sh  vario_fit.sh  variogram.sh
man/: CRMod.1  CRTomo.1  CutMcK.1  Makefile  Makefile.am  Makefile.in
minimalbeispiele/: Makefile.am
omp/: cdgr.for  matmul
scripts/: change.sh  for2f90.sh  get_git_version.sh  git_merge_all.sh  git_testing_merge_dev.sh  git_update.sh  make_crerr.sh  make_doxygen.sh
src/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.orig  Makefile.veryold  alloci.f90  assign_zgbsvx.f90  assign_zpbsvx.f90  bbsedc.f90  bbsens.f90  besp_elem.f90  bessi0.f90  bessi1.f90  bessk0.f90  bessk1.f90  beta.f90  bkfak.f90  blam0.f90  bmcm_mod.f90  bnachbar.f90  bpar.f90  bpot.f90  brough_mod.f90  bsendc.f90  bsens.f90  bsensi.f90  bsigm0.f90  bsigma.f90  bsmatm_mod.f90  bsytop.f90  bvariogram.f90  bvariogram_s.f90  bvolt.f90  bvolti.f90  cg_mod.f90  chareal.f90  chkpol.f90  chol.f90  chold.f90  (+81 more)
test_suite/docs/doc/: conf.py  index.rst  index.rst~  make.bat
test_suite/lib/CRT_test/: test_functions.py
test_suite/lib/crt_test/: CRTomo.py
test_suite/lib/lib_crt/: CRTomo.py  test_functions.py
tests/: gitignore_tomodirs
tests/2.5D_mixed_surf/Test/: .gitignore  crtomo.pid
tests/GridDecoupling/regular_grids/: generate_decouplings.py
tests/TestModInv/Test/: .gitignore
tests/error_parameters/: test_error_parameters.py
tests/minimal/Test/: Bildschirmfoto - 05.05.2014 - 18:39:.txt
tests/modelling_triangular/exe/: crtomo.cfg
tests/non-ordered_boundary_conditions/Reference/: R5_mag  R5_pha  batch_R5.sh
(+715 files in other folders)
